--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     <string name="app_name">Droid Cafe</string>
+<!-- menu -->
     <string name="action_contact">Contact</string>
     <string name="action_order">Order</string>
     <string name="action_status">Status</string>
     <string name="action_favorites">Favorites</string>
+<!-- context menu -->
+    <string name="context_edit">Edit</string>
+    <string name="context_share">Share</string>
+    <string name="context_delete">Delete</string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
